--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="ex0.3gayui/ex0.3gayui.html">테스트</a>
+    <a href="ex0.3gayui/ex0.3gayui.html">가위바위보 게임</a>
 </body>
 </html>
 //https://lecturepark.github.io/js-rocksp/ex0.3gayui/ex0.3gayui.html
